--- a/receptionist.html
+++ b/receptionist.html
@@ -80,6 +80,15 @@
       const currentReceptionist = receptionists.find(r => r.id === user.id) || user;
       const userOrders = orders.filter(o => o.receptionistId === user.id && o.approved !== false);
 
+      // 获取被拒绝且未读的订单
+      const dismissedRejections = JSON.parse(localStorage.getItem(`nyx_dismissed_rejections_${user.id}`) || '[]');
+      const rejectedOrders = orders.filter(o =>
+        o.receptionistId === user.id &&
+        o.approved === false &&
+        o.rejectionReason &&
+        !dismissedRejections.includes(o.id)
+      );
+
       cachedData = {
         receptionists,
         orders,
@@ -87,7 +96,8 @@
         penalties,
         announcements,
         readAnnouncements,
-        currentReceptionist
+        currentReceptionist,
+        rejectedOrders
       };
     }
 
@@ -183,6 +193,21 @@
       }
 
       html += '</div></div>';
+
+      // 订单被拒绝提示（小哭脸）
+      const { rejectedOrders } = cachedData;
+      if (rejectedOrders && rejectedOrders.length > 0) {
+        html += `
+          <div class="rejection-notice" onclick="showRejectionDetails()" style="background: rgba(239, 68, 68, 0.1); border: 1px solid var(--danger); border-radius: 12px; padding: 12px 16px; margin-bottom: 20px; cursor: pointer; display: flex; align-items: center; gap: 12px;">
+            <span style="font-size: 28px;">😢</span>
+            <div style="flex: 1;">
+              <p style="color: var(--danger); font-size: 14px; font-weight: 600;">宝宝审核不通过TvT请查看原因哦</p>
+              <p style="color: var(--text-muted); font-size: 12px;">${rejectedOrders.length}个订单被拒绝</p>
+            </div>
+            <span style="color: var(--text-muted);">▶</span>
+          </div>
+        `;
+      }
 
       // 周任务进度
       html += '<div class="card mb-5">';
@@ -364,6 +389,60 @@
       var checks = JSON.parse(localStorage.getItem(`nyx_promo_${user.id}`) || '[false,false,false,false]');
       checks[index] = !checks[index];
       localStorage.setItem(`nyx_promo_${user.id}`, JSON.stringify(checks));
+      renderPage();
+    }
+
+    // 显示拒绝详情弹窗
+    function showRejectionDetails() {
+      const rejectedOrders = cachedData.rejectedOrders || [];
+      if (rejectedOrders.length === 0) return;
+
+      let detailHtml = '<div style="max-height: 60vh; overflow-y: auto;">';
+      rejectedOrders.forEach((order, index) => {
+        const typeName = order.type === 'normal' ? '正常单' :
+          order.type === 'monthly' ? '月卡单' :
+            order.type === 'prepaid' ? '预存单' :
+              order.type === 'gift' ? '礼物单' : order.type;
+        detailHtml += `
+          <div style="background: var(--bg-light); border-radius: 8px; padding: 12px; margin-bottom: 12px;">
+            <p style="font-size: 14px; margin-bottom: 6px;"><strong>订单 ${index + 1}:</strong> ${order.bossName} - ${typeName}</p>
+            <p style="font-size: 13px; color: var(--danger);"><strong>拒绝原因：</strong>${order.rejectionReason}</p>
+            <p style="font-size: 12px; color: var(--text-muted);">日期：${order.date}</p>
+          </div>
+        `;
+      });
+      detailHtml += '</div>';
+
+      // 创建弹窗
+      const modal = document.createElement('div');
+      modal.id = 'rejectionModal';
+      modal.style.cssText = 'position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0,0,0,0.5); display: flex; align-items: center; justify-content: center; z-index: 1000; padding: 20px;';
+      modal.innerHTML = `
+        <div style="background: var(--bg-card); border-radius: 16px; padding: 24px; max-width: 400px; width: 100%; box-shadow: 0 20px 50px rgba(0,0,0,0.3);">
+          <h3 style="font-size: 18px; margin-bottom: 16px; text-align: center;">😢 订单审核未通过</h3>
+          ${detailHtml}
+          <button onclick="dismissRejections()" style="width: 100%; background: var(--accent); color: #fff; border: none; padding: 12px; border-radius: 8px; font-size: 14px; cursor: pointer; margin-top: 12px;">我知道鸟～</button>
+        </div>
+      `;
+      document.body.appendChild(modal);
+    }
+
+    // 关闭拒绝提示（永久dismisss）
+    function dismissRejections() {
+      const rejectedOrders = cachedData.rejectedOrders || [];
+      const dismissedIds = rejectedOrders.map(o => o.id);
+
+      // 保存到 localStorage
+      const existingDismissed = JSON.parse(localStorage.getItem(`nyx_dismissed_rejections_${user.id}`) || '[]');
+      const newDismissed = [...new Set([...existingDismissed, ...dismissedIds])];
+      localStorage.setItem(`nyx_dismissed_rejections_${user.id}`, JSON.stringify(newDismissed));
+
+      // 关闭弹窗并刷新
+      const modal = document.getElementById('rejectionModal');
+      if (modal) modal.remove();
+
+      // 更新 cachedData 并重新渲染
+      cachedData.rejectedOrders = [];
       renderPage();
     }
 
